%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.12.3 (2016-12-08)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{earsC} now has two new arguments thanks to Howard
    Burkom: the number of past time units to be used in  calculation is
    now not always 7, it can be chosen in the \code{baseline} parameter.
    Furthermore, the \code{minSigma} parameter allows to get a threshold
    in the case of sparse data. When one doesn't give any value for those
    two parameters, the algorithm works like it used to.

    \item \code{animate.sts()} gained support for date labels in the
    bottom \code{timeplot}.

    \item \code{stsplot_space()} and \code{animate.sts()} can now
    generate incidence maps based on the population information
    stored in the supplied \code{"sts"} object.
    Furthermore, \code{animate.sts()} now supports time-varying
    population numbers.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{hhh4()} guards against the misuse of
    \code{family = factor("Poisson")} for univariate time series.
    Previously, this resulted in a negative binomial model by
    definition, but is now interpreted as \code{family = "Poisson"}
    (with a warning).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{animate.sts()} now supports objects with missing values
    (with a warning). Furthermore, the automatic color breaks have been
    improved for incidence maps, also in \code{stsplot_space()}.

    \item The \code{as.data.frame}-method for the \code{"sts"} class,
    applied to classical time-index-based \code{"sts"} objects
    (\code{epochAsDate=FALSE}), ignored a \code{start} epoch different